--- a/app/derive/src/Gnp/Orders/View/voucherMail.twig
+++ b/app/derive/src/Gnp/Orders/View/voucherMail.twig
@@ -3,9 +3,7 @@
 </head>
 <body style="margin: 0; padding: 0; background: #f0f0f0; font-family: Arial, sans-serif; font-size: 14px;">
 <div style="width: 600px; margin: 0 auto; clear: both;">
-    <a href="http://hardisland.com/" target="_blank"><img src="http://hi.gonparty.eu/img/logotip-pdf.png"/></a>
-
-    <span style="display: block; clear: both; height: auto; font-size: 30px; margin: 0 auto; margin: 15px; text-transform: uppercase; text-align: center;">Your VOUCHER for Hard Island Festival is here!</span>
+    <span style="display: block; clear: both; height: auto; font-size: 30px; margin: 0 auto; margin: 15px; text-transform: uppercase; text-align: center;">Your VOUCHER for Hard Island {{ order.offer.title }}</span>
     <span style="display: block; clear: both; height: 1px; background: #ccc;"></span>
 
     <p>Hey!</p>
