--- a/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
+++ b/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
@@ -279,13 +279,13 @@
                 <div class="day-container">
                     <p class="day">TUESDAY</p>
                     <div class="description">Festival</div>
-                    <div class="time">15 - 20 <span>and</span> 22 - 5</div>
+                    <div class="time">15 - 20 <span>and</span> 22 - 6</div>
                     <div class="clear"></div>
                 </div>
                 <div class="day-container">
                     <p class="day">WEDNESDAY</p>
                     <div class="description">Festival</div>
-                    <div class="time">15 - 20 <span>and</span> 22 - 5</div>
+                    <div class="time">15 - 20 <span>and</span> 22 - 6</div>
                     <div class="clear"></div>
                     <div class="description">Raw the boat</div>
                     <div class="time">14 - 17:30</div>
@@ -297,7 +297,7 @@
                 <div class="day-container">
                     <p class="day">THURSDAY</p>
                     <div class="description">Festival</div>
-                    <div class="time">15 - 20 <span>and</span> 22 - 5</div>
+                    <div class="time">15 - 20 <span>and</span> 22 - 6</div>
                     <div class="clear"></div>
                     <div class="description">KTRA Cruise</div>
                     <div class="time">14 - 17:30</div>
@@ -311,8 +311,8 @@
                     <div class="description">Festival</div>
                     <div class="time">17 - end</div>
                     <div class="clear"></div>
-                    <div class="description">Festival</div>
-                    <div class="time">Hard Island Cruise</div>
+                    <div class="description">Hard Island Cruise</div>
+                    <div class="time">17 - 21</div>
                     <div class="clear"></div>
                 </div>
             </div>
