--- a/app/derive/src/Gnp/Orders/View/voucherMail.twig
+++ b/app/derive/src/Gnp/Orders/View/voucherMail.twig
@@ -8,13 +8,12 @@
 
     <p>Hey!</p>
     <p> </p>
-    <p>We are sending you your voucher for Hard Island festival {{ offer.title }} (attached as a PDF).</p>
+    <p>We are sending you your voucher for Hard Island 2016 (attached as a PDF).</p>
     <p> </p>
-    <p>1) Print it out and bring it with you!</p>
-    <p>2) Only the person who made the order received this email. Vouchers for your friends are in the same PDF.</p>
-    <p>3) Read the info on the voucher carefully</p>
-    <p>4) If you have questions <a href="https://hardisland.com/faq-shop" target="_blank">check the FAQ
-            section</a> or <a
+    <p>1) Print it out and bring it with you! (Or save it on your mobile for quick offline access later)</p>
+    <p>2) Only the person who made the order received this email. Services for your friends will be collected with the same voucher (if possible please come as a whole group that made the booking)</p>
+    <p>3) Read the info on the voucher carefully. Please scroll thru all the pages.</p>
+    <p>4) If you have questions <a href="https://hardisland.com/faq-shop" target="_blank">check the FAQ section</a> or <a
                 href="mailto:info@hardisland.com">contact us by email</a>. We are also available on our <span
                 style="text-decoration: underline;">live support</span> at the right bottom corner of our <a
                 href="http://hardisland.com" target="_blank">website</a> or on our <a
