--- a/app/derive/src/Gnp/Orders/View/voucherMail.twig
+++ b/app/derive/src/Gnp/Orders/View/voucherMail.twig
@@ -7,9 +7,10 @@
     <span style="display: block; clear: both; height: 1px; background: #ccc;"></span>
 
     <p>Hey!</p>
-    <p> </p>
-    <p>We are sending you your voucher for Hard Island 2016 (attached as a PDF).</p>
-    <p> </p>
+    <p></p>
+    <!--<p>We are sending you your voucher for Hard Island 2016 (attached as a PDF).</p>-->
+    <p>We are sending you your voucher again for Hard Island 2016 (attached as a PDF) due to error in processing. The now attached voucher is correct. Thank you for your understanding.</p>
+    <p></p>
     <p>1) Print it out and bring it with you! (Or save it on your mobile for quick offline access later)</p>
     <p>2) Only the person who made the order received this email. Services for your friends will be collected with the same voucher (if possible please come as a whole group that made the booking)</p>
     <p>3) Read the info on the voucher carefully. Please scroll thru all the pages.</p>
