--- a/app/derive/src/Gnp/Orders/View/tabelize/recordActions/previewVoucher.twig
+++ b/app/derive/src/Gnp/Orders/View/tabelize/recordActions/previewVoucher.twig
@@ -1,4 +1,2 @@
-<div class="previewVoucher">
-    <a type="button" class="btn btn-warning" href="{{ url('derive.orders.voucher.getHtml', {'order': record}) }}"
-       title="{{ __('preview_voucher') }}"><i class="fa fa-search" aria-hidden="true"></i></a>
-</div>
+<a type="button" class="btn btn-warning" v-bind:href="record.previewVoucherUrl"
+   title="{{ __('preview_voucher') }}"><i class="fa fa-search" aria-hidden="true"></i></a>
