--- a/app/derive/src/Gnp/Orders/View/tabelize/entityActions/generateVoucher.twig
+++ b/app/derive/src/Gnp/Orders/View/tabelize/entityActions/generateVoucher.twig
@@ -1,2 +1,2 @@
-<a type="button" v-on:click.prevent="checkGenerateVoucher()" class="btn btn-info" href="#"
+<a type="button" v-on:click.prevent="entityAction('checkGenerateVoucher')" class="btn btn-info" href="#"
    title="{{ __('generate_voucher') }}"><i class="fa fa-refresh" aria-hidden="true"></i></a>
