--- a/app/derive/src/Gnp/Orders/View/tabelize/entityActions/sendVoucher.twig
+++ b/app/derive/src/Gnp/Orders/View/tabelize/entityActions/sendVoucher.twig
@@ -1,2 +1,2 @@
-<a type="button" v-on:click.prevent="checkSendVoucher()" class="btn btn-danger" href="#"
+<a type="button" v-on:click.prevent="entityAction('checkSendVoucher')" class="btn btn-danger" href="#"
    title="{{ __('send_voucher') }}"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
