--- a/app/derive/src/Gnp/Orders/View/tabelize/recordActions/sendVoucher.twig
+++ b/app/derive/src/Gnp/Orders/View/tabelize/recordActions/sendVoucher.twig
@@ -1,2 +1,2 @@
-<a type="button" v-on:click.prevent="checkSendVoucher({{ record.id }})" class="btn btn-danger" href="#"
+<a type="button" v-on:click.prevent="recordAction(record, 'checkSendVoucher')" class="btn btn-danger" href="#"
    title="{{ __('send_voucher') }}"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
