--- a/app/derive/src/Gnp/Orders/View/allocation.twig
+++ b/app/derive/src/Gnp/Orders/View/allocation.twig
@@ -45,7 +45,7 @@
 <script type="text/javascript">
     new Vue({
         parent: maestroTable,
-        el: '.container-fluid',
+        el: '#attributesModal',
         data: function () {
             return {
                 similarOrders: [],
