--- a/app/derive/src/Pckg/Generic/View/generic.twig
+++ b/app/derive/src/Pckg/Generic/View/generic.twig
@@ -3,13 +3,14 @@
 <head>
     {% include '_head.twig' %}
 </head>
-<body>
+<body id="vue-app">
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -29,6 +30,14 @@
 </nav>
 
 <div class="container-fluid">
+    <!-- alerts -->
+    <pckg-bootstrap-alert v-for="alert in alerts" :style="modal.style" :dismissable="modal.dismissable"
+                          :text="modal.text"></pckg-bootstrap-alert>
+    <!-- modals -->
+    <pckg-bootstrap-modal v-for="modal in modals" :style="modal.style" :dismissable="modal.dismissable"
+                          :body="modal.body" :header="modal.header" :visible="modal.visible"
+                          :id="modal.id"></pckg-bootstrap-modal>
+    <!-- content -->
     {% block content %}{{ content | raw }}{% endblock %}
 </div>
 
