--- a/app/derive/src/Gnp/Orders/View/furs.twig
+++ b/app/derive/src/Gnp/Orders/View/furs.twig
@@ -18,8 +18,8 @@
                 <td>{{ order.num }}</td>
                 <td>{{ order.original }}</td>
                 <td>{{ order.price }}</td>
-                <td>{{ order.bills_total }}</td>
-                <td>{{ order.bills_payed }}</td>
+                <td><b>{{ order.bills_total }}</b></td>
+                <td><b>{{ order.bills_payed }}</b></td>
             </tr>
             {% endverbatim %}
         </table>
