--- a/app/derive/src/Gnp/Orders/View/tabelize/recordActions/applyVoucher.twig
+++ b/app/derive/src/Gnp/Orders/View/tabelize/recordActions/applyVoucher.twig
@@ -1,2 +1,2 @@
-<a type="button" v-on:click.prevent="recordAction(record, 'applyVoucher')" class="btn btn-success" href="#"
+<a v-if="!record.taken_at" type="button" v-on:click.prevent="recordAction(record, 'checkApplyVoucher')" class="btn btn-success" href="#"
    title="{{ __('apply_voucher') }}"><i class="fa fa-lock" aria-hidden="true"></i></a>
