--- a/app/derive/src/Gnp/Orders/View/tabelize/recordActions/reValidVoucher.twig
+++ b/app/derive/src/Gnp/Orders/View/tabelize/recordActions/reValidVoucher.twig
@@ -1,2 +1,2 @@
-<a type="button" v-on:click.prevent="recordAction(record, 'reValidVoucher')" class="btn btn-danger" href="#"
+<a v-if="record.taken_at" type="button" v-on:click.prevent="recordAction(record, 'checkReValidVoucher')" class="btn btn-danger" href="#"
    title="{{ __('revalid_voucher') }}"><i class="fa fa-unlock-alt" aria-hidden="true"></i></a>
