--- a/app/derive/src/Gnp/Orders/View/vouchers.twig
+++ b/app/derive/src/Gnp/Orders/View/vouchers.twig
@@ -25,12 +25,11 @@
         {% endblock %}
         {% block body %}
             <p><b>Order number:</b> {{ '{{ order.num }} - {{ order.id }} - {{ order.voucherId }}' }}</p>
-            <p><b>Offer:</b> {{ '{{ order.offer }}' }}</p>
             <p><b>Payee:</b> {{ '{{{  order.payee }}}' }}</p>
-            <p><b>Packets:</b> {{ '{{{  order.packets }}}' }}</p>
+            <p><b>Packets:</b> {{ '{{{  order.package }}}' }}</p>
             <p><b v-if="order.additions">Additions:</b> {{ '{{{  order.additions }}}' }}</p>
             <b>Checkin comment:</b>
-            <textarea v-model="order.take_comment" class="form-control"></textarea>
+            <textarea v-model="order.info" class="form-control"></textarea>
             <br/>
             <button class="btn btn-success" v-on:click.prevent="applyVoucher">Yes, apply vouchers</button>
         {% endblock %}
@@ -42,14 +41,13 @@
         {% endblock %}
         {% block body %}
             <p><b>Order number:</b> {{ '{{ order.num }} - {{ order.id }} - {{ order.voucherId }}' }}</p>
-            <p><b>Offer:</b> {{ '{{ order.offer }}' }}</p>
             <p><b>Payee:</b> {{ '{{{  order.payee }}}' }}</p>
-            <p><b>Packets:</b> {{ '{{{  order.packets }}}' }}</p>
+            <p><b>Packets:</b> {{ '{{{  order.package }}}' }}</p>
             <p><b v-if="order.additions">Additions:</b> {{ '{{{  order.additions }}}' }}</p>
             <b>Checkin comment:</b>
-            <textarea v-model="order.take_comment" class="form-control"></textarea>
+            <textarea v-model="order.info" class="form-control"></textarea>
             <br/>
-            <button class="btn btn-danger" v-on:click.prevent="applyVoucher">Yes, re-apply vouchers</button>
+            <button class="btn btn-danger" v-on:click.prevent="reApplyVoucher">Yes, re-apply vouchers</button>
         {% endblock %}
     {% endembed %}
 
@@ -88,8 +86,17 @@
                     $('#applyVoucherModal').modal('show');
                 },
                 applyVoucher: function () {
-                    http.post('/dev.php/orders/voucher/apply/' + this.order.id, {}, function (json) {
-                        $('#applyVoucherModal').modal('show');
+                    http.post('/dev.php/orders/voucher/apply/' + this.order.id, {
+                        comment: this.order.info
+                    }, function (json) {
+                        $('#applyVoucherModal').modal('hide');
+                    });
+                },
+                reApplyVoucher: function () {
+                    http.post('/dev.php/orders/voucher/reapply/' + this.order.id, {
+                        comment: this.order.info
+                    }, function (json) {
+                        $('#applyVoucherModal').modal('hide');
                     });
                 },
                 checkReValidVoucher: function () {
