--- a/app/derive/src/Pckg/Generic/View/generic.twig
+++ b/app/derive/src/Pckg/Generic/View/generic.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% do _seo.addAsset(['sbadmin/dist/css/sb-admin-2.css', 'sbadmin/dist/js/sb-admin-2.js']) %}
     {% include '_head.twig' %}
 </head>
 <body id="vue-app">
